--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "element-plus": "^2.2.32",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
